# pointify-arabic-letters

./: CMakeLists.txt  README.md  pointify-arabic.cpp
